# dotfiles

./: .gitignore
haskell/: .turtle-profile.ghci
nvim/: init.lua  lazy-lock.json
nvim/lua/: aerialConf.lua  colors.lua  completion.lua  haskell.lua  keybinds.lua  lazyconf.lua  leapkeys.lua  lsp.lua  plugins.lua  style.lua  treesittersetup.lua  tsfilebrowser.lua  tsmsetup.lua
nvim/lua/plugins/: spec.lua
nvim/plugin/: packer_compiled.lua
nvim/vim/: omnisharp.vim
pwsh/: profile.ps1
tmux/: tmux.conf
turtle/: .turtle-profile.ghci  CHANGELOG.md  cabal.project  turtle-profile.cabal
turtle/turtle-profile-shared/: CHANGELOG.md  turtle-profile-shared.cabal
turtle/turtle-profile-shared/src/: Basics.hs
zsh/: .zsh_profile  .zshrc  theme_alien.zsh  theme_warp.zsh
