cabal-version:   3.14
name:            turtle-profile
version:         0.1.0.0
license:         NONE
author:          br3akp01nt
maintainer:      br3akp01nt@protonmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library lib
    import:           warnings
    exposed-modules:  Profile
    build-depends:    base ^>=4.21.0.0,
                      turtle-shared-lib,
                      turtle-shared-script,
                      turtle-local-lib,
                      turtle-local-script,
                      turtle,
                      fuzzyfind,
                      foldl,
                      process,
                      text,
                      aeson,
                      parsec,
                      mtl,
                      transformers,
                      relude,
                      directory,
                      filepath,
                      network,
                      lens,
                      req,
                      time,
                      csv,
                      graphql-client,
                      aeson-pretty,
                      containers,
                      vector
    mixins: base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
    hs-source-dirs:   src
    default-language: Haskell2010
