cabal-version:   3.14
name:            turtle-profile-shared
version:         0.1.0.0
license:         NONE
author:          Olle Jernelöf
maintainer:      br3akp01nt@protonmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Basics
    build-depends:    base ^>=4.21.0.0,
                      turtle,
                      fuzzyfind,
                      foldl,
                      process,
                      text,
                      aeson,
                      parsec,
                      mtl,
                      transformers,
                      relude,
                      directory,
                      network
    mixins: base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
    hs-source-dirs:   src
    default-language: Haskell2010
